--- a/src/index.css
+++ b/src/index.css
@@ -89,16 +89,38 @@ body {
 }
 
 
+/* WipAlert.jsx */
+.wipAlert {
+  display: flex;
+  align-items: center;
+  max-width: 1000px;
+  position: sticky;
+  background-color: ffbc42;
+}
+
+.wipdisplay {
+  visibility: visible;
+}
+
+/* .wipAlert {
+  display: flex;
+  align-items: center;
+  max-width: 1000px;
+  position: sticky;
+  background-color: ffbc42;
+  visibility: hidden;
+} */
+
 
 /* NavBar.jsx */
-nav {
+/* nav {
   text-align: center;
   margin: 15px auto 0px auto;
   padding: 10px 0px;
 }
 
 nav > ul {
-  display: inline;
+  display: inline-block;
 }
 
 nav > ul > li {
@@ -115,23 +137,63 @@ nav > ul > li:first-child {
   font-size: 28px;
   letter-spacing: 1px;
   margin-right: 15em;
+} */
+
+nav {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  max-width: 1000px;
+  margin: 20px auto;
+  padding: 0px 0px 0px 0px;
+  font-family: Comic Neue;
+  /* border-bottom: 1px solid #f2f2f2; */
 }
+
+nav > ul > li {
+  display: inline-block;
+  margin: 0 15px;
+}
+
+nav > ul {
+  margin-left: auto;
+}
+
+nav > h1 {
+  font-weight: 800;
+  color: #FFF;
+  font-size: 28px;
+  letter-spacing: 1px;
+  margin: 0px 0px 0px 25px;
+  /* margin-right: 15em; */
+}
+
 
 
 /* Navbar rules for mobile screens */
-.hamburger-icon {
-  display: none; /* Initially hidden on larger screens */
+/* .hamburger-icon {
+  display: none; 
   cursor: pointer;
-}
+} */
 
 /* Media query rules for navbar for anything too small to get the regular navbar */
-@media screen and (max-width: 492px) {
+/* @media screen and (max-width: 492px) {
   .hamburger-icon {
     display: block;
   }
+} */
+
+/* @media screen and (max-width: 897px) {
+  nav > ul > li:first-child {
+    margin-right: 5em;
+  }
 }
 
-
+@media screen and (max-width: 897px) {
+  nav > ul > li:first-child {
+    margin-right: 5em;
+  }
+} */
 
 
 
@@ -168,6 +230,11 @@ nav > ul > li:first-child {
   border: 2px solid #6E6684;
   background: #1B0E41;
   margin: 50px auto;
+  background-image: url("\\src\\assets\\ReadyPlayerMe-Avatar_right_facing.png");
+  background-position-x: 240%;
+  background-position-y: 30%;
+  background-size: 85%;
+  background-repeat: no-repeat;
 }
 
 .introcard > ul > li {
