image deployment - take 2

--- a/src/index.css
+++ b/src/index.css
@@ -251,7 +251,7 @@ nav > h1 {
   border: 2px solid #6E6684;
   background: #1B0E41;
   margin: 50px auto;
-  background-image: url("\\src\\assets\\ReadyPlayerMe-Avatar_right_facing.png");
+  background-image: url("\\assets\\ReadyPlayerMe-Avatar_right_facing.png");
   background-position-x: 240%;
   background-position-y: 30%;
   background-size: 85%;
