--- a/src/index.css
+++ b/src/index.css
@@ -434,7 +434,7 @@ hr {
 .careercard {
   max-width: 600px;
   margin: auto;
-  /* font-family: Comic Neue; */
+  font-family: Comic Neue;
   /* font-family: Fira Mono; */
   /* margin: 0px; */
   /* text-align: center; */
@@ -445,7 +445,8 @@ hr {
 }
 
 .careercard-section-spacing {
-  margin-bottom: 25px;
+  margin-bottom: 35px;
+  margin-top: 35px;
 }
 
 /* .biocard-heading {
@@ -465,20 +466,33 @@ hr {
 
 
 .careercard-heading-2 {
-  font-size: 1.1em;
+  font-size: 1.2em;
   font-family: Fira Mono;
   font-weight: 800;
-  line-height: 1.2em;
+  /* line-height: 1.2em; */
 }
 
 .careercard-heading-3 {
   font-size: 1em;
   font-family: Fira Mono;
   font-weight: 800;
-  line-height: 1.3em;
-  color: #928f99;
-  /* text-decoration: underline; */
+  /* color: #928f99; */
+  color: #adaab5;  
+  margin-top: 6px;
+  padding-top: 8px;
 }
+
+.careercard-heading-4 {
+  font-size: 0.7em;
+  /* font-family: Fira Mono; */
+  font-family: Comic Neue;
+  font-weight: 800;
+  /* color: #928f99; */
+  color: #adaab5;  
+  margin-top: 6px;
+  padding-top: 8px;
+}
+
 
 /* Skill.jsx */
 .skill {
@@ -496,12 +510,20 @@ hr {
   background-color: #4d4e72;
 }
 
-.skills-hr {
-  border: 1px solid #928f99;
-  width: 80%;
-  margin: 0px auto 3px auto;
-}
+/* Progress Bar - WIP*/
+/* 
+.progressBar {
+  width: 75%;
+  height: 35px;
+  background-color: #FFF;
+} */
 
+/* .progressBar::-webkit-progress-bar {
+  background-color: #000;
+  border-radius: 50px;
+  width: 75%;
+  height: 35px;
+} */
 
 /* ContactPage.jsx */
 .contactPage {
@@ -538,25 +560,17 @@ hr {
 }
 
 .recentUpdates {
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* text-align: center; */
   margin: auto;
-  /* margin-left: 30%; */
   width: 50%;
   max-width: 700px;
-  /* margin: 0px auto; */
 }
 
 .recentUpdates-items {
   list-style-type: none;
-  /* list-style-position: inside; */
 }
 
 .recentUpdates-items-date {
-  /* font-size: 1em; */
   font-family: Fira Mono;
-  /* font-family: Comic Neue; */
 
   font-size: 1.1em;
   font-weight: 800;
@@ -573,7 +587,6 @@ hr {
   font-size: 0.95em;
 }
 
-
 /* DEV FONTS */
 .comicNeue {
   font-family: Comic Neue;
@@ -582,3 +595,17 @@ hr {
 .firaMono {
   font-family: Fira Mono;
 }
+
+/* .testing-skills-box {
+  border: 2px solid white;
+  border-radius: 50px;
+  padding: 20px;
+} */
+
+/* .asdf {
+font-size: 100px;
+opacity: 80%;
+color:#c9b7fe;
+text-align: left;
+padding-left: 15px;
+} */
