--- a/src/index.css
+++ b/src/index.css
@@ -525,6 +525,45 @@ hr {
   height: 35px;
 } */
 
+.job {
+  text-align: left;
+  margin: 15px 0px;
+}
+
+.job-intro {
+  font-size: 1em;
+  font-family: Comic Neue;
+  font-weight: 800;
+  color: #adaab5;
+}
+
+.job-desc {
+  text-align: left;
+  margin-left: 7%;
+}
+
+
+
+.project-holder {
+  display: flex;
+  align-items: center;
+}
+
+.project-text-section {
+  flex: 67%;
+  padding-left: 20px;
+  text-align: left;
+}
+
+.project-img-holder {
+  flex: 33%;
+  /* max-height: 120px; */
+}
+
+.project-img {
+  max-height: 120px;
+}
+
 /* ContactPage.jsx */
 .contactPage {
   text-align: center;
@@ -609,3 +648,4 @@ color:#c9b7fe;
 text-align: left;
 padding-left: 15px;
 } */
+
