--- a/src/index.css
+++ b/src/index.css
@@ -625,6 +625,35 @@ hr {
   font-size: 0.95em;
 }
 
+.resume-holder {
+  /* padding: auto; */
+  /* margin: auto; */
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* height: 1000px; */
+  /* align-self: center; */
+  /* margin: 35px 0px; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* margin: auto; */
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  /* width: 50vw; */
+
+}
+
+/* .resume { */
+  /* width: 50%; */
+  /* min-width: 600px; */
+  /* height: 150vh; */
+  /* max-width: 850px; */
+
+/* } */
+
 /* DEV FONTS */
 .comicNeue {
   font-family: Comic Neue;
