--- a/src/index.css
+++ b/src/index.css
@@ -654,6 +654,26 @@ hr {
 
 /* } */
 
+/* LoadingModal.jsx */
+.loading-spinner{
+  width:50px;
+  height:50px;
+  border:5px solid white;
+  border-radius:50%;
+  border-top-color:#000000;
+  display:inline-block;
+  animation:loadingspinner 1.5s linear infinite;
+}
+@keyframes loadingspinner{
+  0%{
+    transform:rotate(0deg)
+  }
+  100%{
+    transform:rotate(360deg)
+  }
+}
+
+
 /* DEV FONTS */
 .comicNeue {
   font-family: Comic Neue;
