--- a/src/index.css
+++ b/src/index.css
@@ -713,6 +713,16 @@ hr {
 /* } */
 
 /* LoadingModal.jsx */
+.modal-progress {
+  font-size: 1em;
+  font-family: Fira Mono;
+  font-weight: 800;
+  color: #adaab5;  
+  margin-top: 6px;
+  padding-top: 8px;
+  text-align: center;
+}
+
 .loading-spinner{
   width:50px;
   height:50px;
@@ -725,6 +735,12 @@ hr {
 @keyframes loadingspinner{
   0%{
     transform:rotate(0deg)
+  }
+  25%{
+    transform:rotate(90deg)
+  }
+  50%{
+    transform:rotate(180deg)
   }
   100%{
     transform:rotate(360deg)
